[gd_scene load_steps=4 format=3 uid="uid://cxqvhp0y7s3gm"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_2n3m4"]
[ext_resource type="PackedScene" uid="uid://du8xh7yq8vw1w" path="res://scenes/player.tscn" id="2_5t6u7"]
[ext_resource type="PackedScene" uid="uid://crx9ty4z2l8kn" path="res://scenes/ui.tscn" id="3_8v9w0"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2n3m4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.117647, 0.117647, 0.168627, 1)

[node name="Player" parent="." instance=ExtResource("2_5t6u7")]
position = Vector2(640, 360)

[node name="UI" parent="." instance=ExtResource("3_8v9w0")]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ObjectSpawner" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Objects" type="Node2D" parent="."]

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="ObjectSpawner" to="." method="_on_object_spawner_timeout"]
